--- a/app/components/SectionFive/sectionFive.module.css
+++ b/app/components/SectionFive/sectionFive.module.css
@@ -56,6 +56,7 @@
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   transition: box-shadow 0.3s;
+  cursor: pointer;
 }
 
 .section__btn:active {
