--- a/app/components/Header/header.module.css
+++ b/app/components/Header/header.module.css
@@ -37,6 +37,7 @@
   color: var(--title-color);
   font-size: var(--font-h1);
   transition: 0.3s;
+  cursor: pointer;
 }
 
 .header__nav__link--unset {
