--- a/app/components/Footer/footer.module.css
+++ b/app/components/Footer/footer.module.css
@@ -7,6 +7,7 @@
   gap: 2rem;
   background-color: var(--first-color-dark);
   color: var(--text-color-light);
+  overflow-y: hidden;
 }
 
 .footer__container {
@@ -82,6 +83,19 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+}
+
+.footer__fade-in {
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    transform: translateY(20px);
+  }
+  to {
+    transform: translateY(0);
+  }
 }
 
 @media screen and (min-width: 768px) {
