--- a/app/components/SectionThree/sectionThree.module.css
+++ b/app/components/SectionThree/sectionThree.module.css
@@ -1,20 +1,34 @@
+.section{
+    width: 100%;
+}
+
 .flex {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 500px;
+    height: 536px;
+}
+
+.text_part {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap:2rem;
 }
 
 .title {
-    font-size: 2rem;
+    font-size: var(--font-bigger);
     text-align: center;
     color: var(--title-color);
     width: 100%;
+    font-family: "Lora", serif;
 }
 
 .content {
-    font-size: 1rem;
+    font-size: var(--font-h3);
     text-align: center;
     color: var(--text-color);
     width: 100%;
@@ -36,38 +50,162 @@
     font-size: 1rem;
 }
 
-.image_part{
+.image_part {
     position: relative;
     width: 100%;
 }
 
-.bottom_image{
-    position:absolute;
-    top: 50%;
+.bottom_image {
+    position: absolute;
+    top: 60%;
     left: 0;
-    z-index: -1;
+
 }
 
 .image_div1 {
     position: relative;
+    z-index: 1;
 }
 
-.box1 {
+.image1 {
+    width: 250px;
+    height: 171.88px;
+}
+
+/* .box1 {
     position: absolute;
     left: 150px;
     top: 20%;
+} */
+
+.box1 {
+    background-color: var(--container-color);
+    border-radius: 16px;
+    width: 182px;
+    height: 48px;
+    position: absolute;
+    left: 130px;
+    top: 20%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-.image_div2{
+
+.box1>span {
+    background: linear-gradient(to right, var(--gradient-start), var(--gradient-end));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: center;
+    font-weight: 800;
+    font-size: var(--font-small);
+}
+
+.image_div2 {
     position: relative;
 }
 
-.image2{
+.image2 {
     margin-left: 25%;
+    width: 250px;
+    height: 171.88px;
 }
 
-.box2 {
+/* .box2 {
     position: absolute;
     left: 0;
     top: 60%;
+} */
+
+.box2 {
+    background-color: var(--container-color);
+    border-radius: 16px;
+    width: 182px;
+    height: 48px;
+    position: absolute;
+    left: -5%;
+    top: 60%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    font-size: var(--font-small);
+}
+
+.box2>span {
+    background: linear-gradient(to right, var(--gradient-start), var(--gradient-end));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: center;
+    font-weight: 800;
+}
+
+
+
+/*
+##Device = Desktops
+##Screen = 1281px to higher resolution desktops
+*/
+
+@media (min-width: 780px) {
+
+    .flex {
+        display: flex;
+        justify-content: space-evenly;
+        flex-direction: row;
+        align-items: center;
+        height: 576px;
+        width: 100%;
+        gap: 2rem;
+    }
+
+    .text_part {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: flex-start;
+        gap: 1rem;
+        max-width: 400px;
+    }
+
+    .title {
+        text-align: left;
+        color: var(--title-color);
+    }
+
+    .content {
+        font-size: 1rem;
+        text-align: left;
+        color: var(--text-color);
+    }
+
+    .image_part {
+        position: relative;
+        width: 50%;
+    }
+
+    .box1 {
+        width: 230px;
+        height: 56px;
+        left: 50%;
+        top: 20%;
+    }
+
+    .box2 {
+        width: 230px;
+        height: 56px;
+        left: 25%;
+        top: 60%;
+    }
+
+    .image2 {
+        margin-left: 300px;
+    }
+
+    .image1,
+    .image2 {
+        width: 500px;
+        height: 343.75px;
+    }
+
 }
