--- a/app/components/Footer/footer.module.css
+++ b/app/components/Footer/footer.module.css
@@ -91,9 +91,11 @@
 
 @keyframes fadeIn {
   from {
+    opacity: 0.5;
     transform: translateY(20px);
   }
   to {
+    opacity: 1;
     transform: translateY(0);
   }
 }
