--- a/app/components/SectionOne/sectionOne.module.css
+++ b/app/components/SectionOne/sectionOne.module.css
@@ -1,63 +1,77 @@
 .section {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .container {
-    display: flex;
-    gap: 2rem;
-    align-items: center;
-    justify-content: center;
-    padding: 2rem;
-    text-align: center;
-    transition: transform 0.3s;
-    cursor: pointer;
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem;
+  text-align: center;
+  transition: transform 0.3s;
+  cursor: pointer;
 }
 
 .number {
-    display: flex;
-    font-size: var(--font-big);
-    font-weight: 700;
-    color: var(--title-color);
-    margin-bottom: 2rem;
-
+  display: flex;
+  font-size: var(--font-big);
+  font-weight: 700;
+  color: var(--title-color);
+  margin-bottom: 2rem;
 }
 
 .image {
-    width: 100%;
-    height: auto;
-    border-radius: 9999px;
-    margin-bottom: 2rem;
-    background-color: var(--first-color-light);
+  width: 100%;
+  height: auto;
+  border-radius: 9999px;
+  margin-bottom: 2rem;
+  background-color: var(--first-color-light);
 }
 
 .title {
-    font-size: var(--font-h1);
-    color: var(--text-color);
-    margin-bottom: 1rem;
-    width: 100%;
+  font-size: var(--font-h1);
+  color: var(--text-color);
+  margin-bottom: 1rem;
+  width: 100%;
 }
 
 .text {
-    font-size: var(--font-h3);
-    color: var(--text-color-light);
-    margin-bottom: 2rem;
-    width: 100%;
-    height: auto;
+  font-size: var(--font-small);
+  color: var(--text-color-light);
+  margin-bottom: 2rem;
+  width: 100%;
+  height: auto;
+  position: relative;
 }
+
+.stars {
+  position: absolute;
+  top: -38px;
+  left: -16px;
+}
+
 .button {
-    display: flex;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  border: none;
+  font-size: var(--font-h3);
+  font-weight: 700;
+  color: var(--first-color-light);
+  background-color: var(--body-color);
+  transition: 0.3s;
+  cursor: pointer;
+  align-self: center;
+}
+
+@media screen and (min-width: 768px) {
+  .section {
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
     gap: 0.5rem;
-    padding: 1rem 2rem;
-    border: none;
-    font-size: var(--font-h3);
-    font-weight: 700;
-    color: var(--first-color-light);
-    background-color: var(--body-color);
-    transition: 0.3s;
-    cursor: pointer;
-    align-self: center;
+  }
 }
