fix(global): container color

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
   --first-color-dark: #1e0849;
 
   --body-color: #f5f0ff;
-  --container-color: #f5f0ff;
+  --container-color: #ffffff;
 
   --gradient-start: #ff52af;
   --gradient-end: #9f53ff;
